// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`timeInput > renders can move with arrow keys - 12-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_3u_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_3v_"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_3u_"
              placeholder="00"
              role="spinbutton"
              value="12"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_3v_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_3u_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_3v_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="14"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_3u_"
              placeholder="00"
              role="spinbutton"
              value="14"
            />
          </div>
          <input
            aria-describedby="_r_3v_"
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="12"
            aria-valuetext="pm"
            autocomplete="off"
            class="styles__yl1788 styles_period_true__yl1789"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_3u_"
            placeholder="AM"
            role="spinbutton"
            value="PM"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_3v_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders can move with arrow keys - 24-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_4a_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_4b_"
              aria-valuemax="23"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_4a_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_4b_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_4a_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_4b_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="14"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_4a_"
              placeholder="00"
              role="spinbutton"
              value="14"
            />
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
            data-testid="clear"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              clear value
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_4b_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly clearable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_3g_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_3h_"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_3g_"
              placeholder="00"
              role="spinbutton"
              value="12"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_3h_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_3g_"
              placeholder="00"
              role="spinbutton"
              value="00"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_3h_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_3g_"
              placeholder="00"
              role="spinbutton"
              value="00"
            />
          </div>
          <input
            aria-describedby="_r_3h_"
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuetext="am"
            autocomplete="off"
            class="styles__yl1788 styles_period_true__yl1789"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_3g_"
            placeholder="AM"
            role="spinbutton"
            value="AM"
          />
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_neutral__e1wcoe8 styles_size_small__e1wcoeg styles_variant_ghost__e1wcoej styles_undefined_compound_24__e1wcoe19"
            data-testid="clear"
            type="button"
          >
            <span
              class="styles__u0p5n50"
            >
              clear value
            </span>
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_3h_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly controlled - 12-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_2o_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_2p_"
              aria-valuemax="12"
              aria-valuemin="1"
              aria-valuenow="12"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_2o_"
              placeholder="00"
              role="spinbutton"
              value="12"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_2p_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_2o_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_2p_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="7"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_2o_"
              placeholder="00"
              role="spinbutton"
              value="07"
            />
          </div>
          <input
            aria-describedby="_r_2p_"
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuetext="am"
            autocomplete="off"
            class="styles__yl1788 styles_period_true__yl1789"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_2o_"
            placeholder="AM"
            role="spinbutton"
            value="AM"
          />
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_2p_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly controlled - 24-hours format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_34_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          labeldescription
        </span>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_35_"
              aria-valuemax="23"
              aria-valuemin="0"
              aria-valuenow="23"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_34_"
              placeholder="00"
              role="spinbutton"
              value="23"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_35_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="32"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_34_"
              placeholder="00"
              role="spinbutton"
              value="32"
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_35_"
              aria-valuemax="59"
              aria-valuemin="0"
              aria-valuenow="31"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_34_"
              placeholder="00"
              role="spinbutton"
              value="31"
            />
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_35_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_6_"
      >
        test
      </label>
      <div
        class="styles__yl1780 styles_disabled_true__yl1782 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              disabled=""
              id="_r_6_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              disabled=""
              id="_r_6_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              disabled=""
              id="_r_6_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_1i_"
      >
        test
      </label>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_1i_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_1i_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_1i_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_e_"
      >
        test
      </label>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_readOnly_true__yl1784 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_e_"
              placeholder="00"
              readonly=""
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_e_"
              placeholder="00"
              readonly=""
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_e_"
              placeholder="00"
              readonly=""
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_10_"
        >
          test
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        >
          *
        </span>
      </div>
      <div
        aria-required="true"
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_10_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_10_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_10_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_1a_"
      >
        test
      </label>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_small__yl1787 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="small"
              data-testid="hours-input"
              id="_r_1a_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="small"
              data-testid="minutes-input"
              id="_r_1a_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="small"
              data-testid="seconds-input"
              id="_r_1a_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with 12-hour format 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_1q_"
      >
        test
      </label>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="12"
              aria-valuemin="1"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_1q_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_1q_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_1q_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
          <input
            aria-valuemax="12"
            aria-valuemin="0"
            aria-valuenow="12"
            autocomplete="off"
            class="styles__yl1788 styles_period_true__yl1789"
            data-size="large"
            data-testid="am-pm-input"
            id="_r_1q_"
            placeholder="AM"
            role="spinbutton"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with base props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_0_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_0_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_0_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_m_"
      >
        test
      </label>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_error_true__yl1783 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_n_"
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_m_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_n_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_m_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_n_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_m_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_n_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with helper and error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_2c_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_bodySmall__m4c9owk style_undefined_compound_0__m4c9ow1a"
        >
          label description
        </span>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_error_true__yl1783 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_2d_"
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_2c_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_2d_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_2c_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_2d_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_2c_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzf uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_2d_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`timeInput > renders correctly with label description and helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_22_"
        >
          label
        </label>
        <h1>
          label
        </h1>
      </div>
      <div
        class="styles__yl1780 styles_disabled_false__yl1781 styles_size_large__yl1785 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_space-between_xxsmall__toi52u77"
      >
        <div
          class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_23_"
              aria-valuemax="23"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="hours-input"
              id="_r_22_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_23_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="minutes-input"
              id="_r_22_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
            <span
              class="styles__yl178a style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
            >
              :
            </span>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          >
            <input
              aria-describedby="_r_23_"
              aria-valuemax="59"
              aria-valuemin="0"
              autocomplete="off"
              class="styles__yl1788"
              data-size="large"
              data-testid="seconds-input"
              id="_r_22_"
              placeholder="00"
              role="spinbutton"
              value=""
            />
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        id="_r_23_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;
